2003-08-10  MINAMI Hirokazu  <minami@mistfall.net>

	* x_xim.c:
	- xim->im should be cleared when im was closed due to an error.
	- Default XIM name sis now "none", not "@im=none".

2003-08-10  Araki Ken  <arakiken@users.sf.net>

	* Cursor wasn't redrawn under vertical writing mode.
	  Added ml_xterm_event_listener_t.start_2 and fixed this problem.

	* Using ml_char_at() instead of refering to ml_line_t:chars[] array
	  directly.

	* ml_edit_intern.c: renamed to ml_edit_util.c.

2003-08-05  Araki Ken  <arakiken@users.sf.net>

	* ml_screen.c(receive_scrolled_out_line): Adhoc workaround
	  to fix strange selection in backscroll mode.

2003-08-03  Seiichi SATO  <ssato@sh.rim.or.jp>

	* configure.in: I forgot appending '-export-symbol' to DL_LIBS.

2003-08-03  Seiichi SATO  <ssato@sh.rim.or.jp>

	* configure.in, configure, kiklib/configure.in, kiklib/configure
	  kiklib/src/Makefile.in, kik_dlfcn_ltdl.c, xwindow/Makefile.in
	  tool/mlconfig/Makefile.in, contrib/tool/mlterm-menu/Makefile.in:
	  Added libltdl support.
	  (Thanks to Aida Shinra san for sending a patch)

	* kik_dlfcn_dld.c, kik_dlfcn_win32.c: Some cleanups.

2003-08-03  Araki Ken  <arakiken@users.sf.net>

	* ml_line.c(ml_line_set_modified):
	  Fixed a bug in dealing with multi-byte character.
	  (Thanks to Kubota Tomohiro san)

2003-07-27  Seiichi SATO  <ssato@sh.rim.or.jp>

	* mkf/lib/Makefile.in: My change(2003-03-21) seems to be wrong. Fixed.

2003-07-27  Araki Ken  <arakiken@users.sf.net>

	* Added OPTIMIZE_REDRAWING macro, which is defined by default, to ml_line.c.

2003-07-27  Tomohiro KUBOTA <kubota@debian.org>

	* contrib/tool/mlterm-menu/Makefile.in: SYSCONFDIR is changed
	  from $(sysconfdir)/mlterm to $(sysconfdir) because "mlterm"
	  is added by source-file-side.  This fixes a problem that
	  mlterm-menu refers /etc/mlterm/mlterm/menu (which should be
	  /etc/mlterm/menu) as system-wide configuration file.

2003-07-27  Araki Ken  <arakiken@users.sf.net>
